--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ figure {
             </a>
             <a class="supp-btn" href="assets/code">
                 <span class="material-icons"> description </span> 
-                 Code
+                 Code (soon)
             </a>
         </div></div>
     </div>
