--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ figure {
     margin-bottom: 10px;
 }
 #bibtex pre {
-    font-size: 14px;
+    font-size: 13px;
     background-color: #eee;
     padding: 16px;
 }
@@ -283,11 +283,11 @@ figure {
 
         <div style="clear: both">
             <div class="paper-btn-parent">
-            <a class="supp-btn" href="assets/paper.pdf">
+            <a class="supp-btn" href="https://arxiv.org/abs/2307.01831">
                 <span class="material-icons"> description </span> 
                  Paper
             </a>
-            <a class="supp-btn" href="assets/code">
+            <a class="supp-btn" href="https://github.com/DiT-3D/DiT-3D">
                 <span class="material-icons"> description </span> 
                  Code (soon)
             </a>
@@ -479,13 +479,13 @@ figure {
         <h2>Citation</h2>
         <hr>
         <pre><code>
-        @inproceedings{mo2023dit3d,
+        @article{mo2023dit3d,
         title = {DiT-3D: Exploring Plain Diffusion Transformers for 3D Shape Generation},
-        author = {Shentong Mo and Enze Xie and Ruihang Chu and Lanqing HONG and Matthias Nießner and Zhenguo Li},
-        year = {2023},
+        author = {Shentong Mo and Enze Xie and Ruihang Chu and Lanqing Hong and Matthias Nießner and Zhenguo Li},
+        journal = {arXiv preprint arXiv: 2307.01831},
+        year = {2023}
         }
-
-</code></pre>
+        </code></pre>
     </section>
 
 <br />
@@ -502,7 +502,7 @@ figure {
                 <p>Shentong Mo, Enze Xie, Ruihang Chu, Lanqing HONG, Matthias Nießner, Zhenguo Li</p>
 
                 <!-- <div><span class="material-icons"> description </span><a href="assets/dmtet.pdf"> Paper camera-ready</a></div> -->
-                <div><span class="material-icons"> description </span><a href="assets/paper.pdf"> arXiv version</a></div>
+                <div><span class="material-icons"> description </span><a href="https://arxiv.org/abs/2307.01831"> arXiv version</a></div>
                 <!-- <div><span class="material-icons"> description </span><a href="assets/suppl.zip"> Supplement</a></div> -->
                 <!-- <div><span class="material-icons"> insert_comment </span><a href="assets/dmtet-bib.txt"> BibTeX</a></div> -->
             </div>
