--- a/index.html
+++ b/index.html
@@ -499,12 +499,9 @@ figure {
             </div>
             <div style="width: 50%">
                 <p><b>DiT-3D: Exploring Plain Diffusion Transformers for 3D Shape Generation</b></p>
-                <p>Shentong Mo, Enze Xie, Ruihang Chu, Lanqing HONG, Matthias Nießner, Zhenguo Li</p>
+                <p>Shentong Mo, Enze Xie, Ruihang Chu, Lanqing Hong, Matthias Nießner, Zhenguo Li</p>
 
-                <!-- <div><span class="material-icons"> description </span><a href="assets/dmtet.pdf"> Paper camera-ready</a></div> -->
                 <div><span class="material-icons"> description </span><a href="https://arxiv.org/abs/2307.01831"> arXiv version</a></div>
-                <!-- <div><span class="material-icons"> description </span><a href="assets/suppl.zip"> Supplement</a></div> -->
-                <!-- <div><span class="material-icons"> insert_comment </span><a href="assets/dmtet-bib.txt"> BibTeX</a></div> -->
             </div>
         </div>
     </section>
